# noisepage-pilot

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.sql  debug.py  docker-compose.yaml  dodo.py  example_setup.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  release.yml  setup.yml
action/generation/: action.py  action_selection.py  connector.py  constants.py  generate_create_index_tpcc.py  index_actions.py  knob_actions_rel.py  logparsing.py  logparsing_copy.py  workload.py
action/recommendation/: index_picker.py
action/selection/open_spiel/: CMakeLists.txt  README.md  database.cc  database.h  database_game.cc
behavior/: .editorconfig  .flake8  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  run.py  setup.py  util.py
behavior/config/datagen/: default.yaml
behavior/config/datagen/benchbase/: tpcc_config.xml
behavior/config/modeling/: default.yaml
behavior/datagen/: cleanup.py  datagen.py  gen.py  generate_workloads.py  generator.py  run_workloads.sh
behavior/microservice/: app.py
behavior/microservice/templates/: base.html  index.html
behavior/modeling/: __init__.py  featurize.py  inference.py  model.py  train.py
behavior/plans/: .gitignore  __init__.py  diff.py  diff_c.pyx  plans.py  setup.py
behavior/scripts/: lint.py  lint.sh  test_extensions.sh  train.sh  wipe_results.sh
behavior/scripts/analysis/: README.md
behavior/src/: __init__.py  run.py
behavior/src/datagen/: cleanup.py  datagen.py
behavior/src/modeling/: model.py  train.py
behavior/src/plans/: diff.py  plans.py
config/behavior/: datagen.yaml  default.yaml  modeling.yaml
config/behavior/benchbase/: auctionmark_config.xml  epinions_config.xml  noop_config.xml  seats_config.xml  sibench_config.xml  smallbank_config.xml  tatp_config.xml  tpcc_config.xml  tpch_config.xml  twitter_config.xml  voter_config.xml  wikipedia_config.xml  ycsb_config.xml
config/behavior/datagen/: default.yaml
config/behavior/postgres/: postgresql.conf
config/datagen/: default.yaml
config/datagen/postgres/: postgresql.conf
config/modeling/: default.yaml
config/postgres/: default_postgresql.conf  dev4_postgresql.conf
demo/: mvp.sh
docker/: Dockerfile  README.md  up.sh
docker/behavior/: Dockerfile  docker-compose.yaml  entrypoint.sh  run.sh
docs/: design_glue-library-choice.md  dev_environment.md
dodos/: README.md  __init__.py  action.py  behavior.py  benchbase.py  ci.py  forecast.py  noisepage.py  pilot.py  project1.py  tscout.py
evaluation/: utils.py
forecast/: README.md  Sample-Usage.ipynb  Sine_Forecast.ipynb  clusterer.py  forecaster.py  model.py  preprocessor.py
pilot/: bootstrap_tables.sql  client.py  daemon.py  protocol.py
project/: README.md  project1.sh
scripts/: datadiff.py  wipe_results.sh
scripts/analysis/: eda.ipynb
